--- a/test_libxw.vcxproj
+++ b/test_libxw.vcxproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ClCompile Include="test\runtest.c" />
     <ClCompile Include="test\teststack.c" />
+    <ClCompile Include="test\testutil.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Tools\Programming\C\CUnit-2.1-3\CUnit\Headers\CUnit.h" />
