--- a/test_libxw.vcxproj.filters
+++ b/test_libxw.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="test\runtest.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test\testutil.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Tools\Programming\C\CUnit-2.1-3\CUnit\Headers\CUnit.h">
