--- a/test_libxw.vcxproj
+++ b/test_libxw.vcxproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test\runtest.c" />
+    <ClCompile Include="test\testqueue.c" />
     <ClCompile Include="test\teststack.c" />
     <ClCompile Include="test\testutil.c" />
   </ItemGroup>
