add the support of the data type of matrix based on cross linked list

--- a/libxw.vcxproj
+++ b/libxw.vcxproj
@@ -313,6 +313,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\convstr.c" />
+    <ClCompile Include="src\crosslnk.c" />
     <ClCompile Include="src\minivm.c" />
     <ClCompile Include="src\stqu.c" />
     <ClCompile Include="src\trimstr.c" />
