--- a/libxw.vcxproj.filters
+++ b/libxw.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\stqu.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\crosslnk.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="libxw.def">
