--- a/test_libxw.vcxproj.filters
+++ b/test_libxw.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="test\testqueue.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test\testmatrix.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Tools\Programming\C\CUnit-2.1-3\CUnit\Headers\CUnit.h">
