add the implementation of a general quick sort algorithm.

--- a/libxw.vcxproj
+++ b/libxw.vcxproj
@@ -315,6 +315,7 @@
     <ClCompile Include="src\convstr.c" />
     <ClCompile Include="src\crosslnk.c" />
     <ClCompile Include="src\minivm.c" />
+    <ClCompile Include="src\sort.c" />
     <ClCompile Include="src\stqu.c" />
     <ClCompile Include="src\trimstr.c" />
   </ItemGroup>
